 iCal4j - Changes
==================

0.9.13:

 - Merged DateRange functionality into Period
 
 - Merged DateRangeNormalizer functionality into PeriodList
 
 - Removed Calendar.getEventDateRanges() (use VFreeBusy request instead)
 
 - Removed VEvent.getDateRanges() (use VEvent.getConsumedTime() instead)
 
 - Removed VEvent.getRecurringStartDates() (use Recur.getDates() instead)
 
 
0.9.12:

 - Redefined parameter and property constants to class instances rather
 than strings. This is done for efficiency where class instances are immutable
 once created. Note: this may cause incompatibilities with existing code!
 
 - fixed bug in parsing periods
 
 - fixed bug in TimeZoneUtils for non-DST timezones
 
 - added support for removal of extraneous newlines between components in the
 default parser implementation (KOrganizer generates such files)
 
 - fixed bug in parsing free time where durations are specified
 
 - Various constants reimplemented as typed instances (as opposed to strings)
 
 NOTE: This may break existing code based on earlier releases! Please check
 your usage of the following classes:
 
 	* net.fortuna.ical4j.model.WeekDay
 	* net.fortuna.ical4j.model.parameter.CuType
 	* net.fortuna.ical4j.model.parameter.Encoding
 	* net.fortuna.ical4j.model.parameter.FbType
 	* net.fortuna.ical4j.model.parameter.PartStat
 	* net.fortuna.ical4j.model.parameter.Range
 	* net.fortuna.ical4j.model.parameter.Related
 	* net.fortuna.ical4j.model.parameter.RelType
 	* net.fortuna.ical4j.model.parameter.Role
 	* net.fortuna.ical4j.model.parameter.Rsvp
 	* net.fortuna.ical4j.model.parameter.Value
 	* net.fortuna.ical4j.model.property.Action
 	* net.fortuna.ical4j.model.property.CalScale
 	* net.fortuna.ical4j.model.property.Clazz
 	* net.fortuna.ical4j.model.property.Method
 	* net.fortuna.ical4j.model.property.Priority
 	* net.fortuna.ical4j.model.property.Status
 	* net.fortuna.ical4j.model.property.Transp
 	
 