@@ -224,6 +224,18 @@
                     </ul>
                 </td>
             </tr>
+            <tr>
+                <th>0.9.13</th>
+                <td style="width:100%">
+                    <ul>
+                        <li>Seventh alpha release</li>
+                        <li>"Normalised" DateRange/Period, DateRangeNormalizer/PeriodList and associated recurrance methods</li>
+                        <li>Default charset is now UTF-8</li>
+                        <li>Applied patch <a href="https://sourceforge.net/tracker/index.php?func=detail&aid=1203990&group_id=107024&atid=646395">#1203990</a></li>
+                        <li>See the CHANGELOG for further details</li>
+                    </ul>
+                </td>
+            </tr>
             <tr style="color: silver">
                 <th style="white-space:nowrap">1.0 beta</th>
                 <td style="width:100%">
